// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Dropdown.Body renders all children without crashing 1`] = `
<div
  className="body"
  id="reactist-dropdown-body"
  style={
    Object {
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  Body Content
</div>
`;

exports[`Dropdown Dropdown.Body renders all children without crashing 2`] = `
<div
  className="body"
  id="reactist-dropdown-body"
  style={
    Object {
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <div>
    <img
      alt=""
      src=""
    />
    Some additional text as well
  </div>
</div>
`;

exports[`Dropdown Dropdown.Body renders empty without crashing 1`] = `
<div
  className="body"
  id="reactist-dropdown-body"
  style={
    Object {
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
/>
`;

exports[`Dropdown Dropdown.Box renders the Trigger component without crashing 1`] = `
<Dropdown.Box>
  <div
    className="reactist_dropdown"
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <Dropdown.Trigger
      onClick={[Function]}
    >
      <div
        className="trigger"
        onClick={[Function]}
        style={
          Object {
            "display": "block",
          }
        }
      />
    </Dropdown.Trigger>
  </div>
</Dropdown.Box>
`;

exports[`Dropdown Dropdown.Trigger renders all children without crashing 1`] = `
<div
  className="trigger"
  onClick={[Function]}
  style={
    Object {
      "display": "block",
    }
  }
>
  Trigger Content
</div>
`;

exports[`Dropdown Dropdown.Trigger renders all children without crashing 2`] = `
<div
  className="trigger"
  onClick={[Function]}
  style={
    Object {
      "display": "block",
    }
  }
>
  <div>
    <img
      alt=""
      src=""
    />
    Some additional text as well
  </div>
</div>
`;

exports[`Dropdown Dropdown.Trigger renders empty without crashing 1`] = `
<div
  className="trigger"
  onClick={[Function]}
  style={
    Object {
      "display": "block",
    }
  }
/>
`;
